surfraw (2.2.6-1) unstable; urgency=low

  * New upstream version.
    + Only use first matching bookmark (Closes: #530786).
    + Fix debsec (patch from Moritz Muehlenhoff) (Closes: #550741).
  * Remove Moritz from Uploaders (per #550741), thanks for your work!.
  * debian/control:
    + update vcs- fields to point to new git repo.
    + Standards-Version: 3.8.3 (No changes).

 -- Ian Beckwith <ianb@debian.org>  Tue, 27 Oct 2009 00:21:33 +0000

surfraw (2.2.5-1) unstable; urgency=low

  * New upstream version.
  * Removed Thomas Smith from Uploaders (Closes: #519378).
    Thanks for your work!.
  * Updated my email address in Uploaders.
  * Fixed VCS-Browser URL (Closes: #528299).
  * Removed DM-Upload-Allowed header.
  * Standards-Version: 3.8.1 (no changes).

 -- Ian Beckwith <ianb@debian.org>  Wed, 13 May 2009 02:09:49 +0100

surfraw (2.2.4-1) unstable; urgency=low

  * New upstream version.
  * postrm: add 'set -e'.
  * debian/copyright:
    + Update copyright years to include 2009.
    + point to right GPL link (NB only the file 'missing' is GPLed, most
      of the package is PD).

 -- Ian Beckwith <ianb@erislabs.net>  Sun, 01 Mar 2009 02:30:59 +0000

surfraw (2.2.3-1) unstable; urgency=low

  * New upstream version.
    + Now defaults to graphical mode, see surfraw(1) for how to change it back.
  * Change default text browser to www-browser and default
    graphical browser to sensible-browser. 

 -- Ian Beckwith <ianb@erislabs.net>  Tue, 26 Aug 2008 22:36:24 +0100

surfraw (2.2.2-3) unstable; urgency=low

  * Backport slinuxdoc fix from 2.2.3 prerelease.

 -- Ian Beckwith <ianb@erislabs.net>  Fri, 25 Jul 2008 05:14:30 +0100

surfraw (2.2.2-2) unstable; urgency=medium

  * google: fix bashism and quote more variable expansions (Closes: #489902).
    Thanks to Philip Armstrong and John Briggs.
  * Reformat debian/copyright to keep lintian happy.

 -- Ian Beckwith <ianb@erislabs.net>  Sat, 19 Jul 2008 00:50:33 +0100

surfraw (2.2.2-1) unstable; urgency=low
