@@ -6,6 +6,7 @@ if OPENSEARCH
 dist_bin_SCRIPTS = opensearch-discover opensearch-genquery
 endif
 devel_extra	= banner prebuild
+examples_extra  = examples/README examples/uzbl-load-url-from-surfraw
 noinst_DATA	= surfraw-bash-completion
 man_MANS = surfraw-update-path.1 surfraw.1 elvi.1sr
 if OPENSEARCH
@@ -14,7 +15,8 @@ endif
 EXTRA_DIST	= surfraw.lsm.in surfraw.IN surfraw-update-path.IN\
                   surfraw.spec.in aclocal.m4 HACKING Makefile.include \
 		  surfraw.1.IN elvi.1sr.IN surfraw.bookmarks links.IN \
-		  $(devel_extra) surfraw-bash-completion.IN surfraw.conf.IN
+		  surfraw-bash-completion.IN surfraw.conf.IN \
+		  $(devel_extra) $(examples_extra)
 
 CLEANFILES = surfraw surfraw-update-path surfraw-update-path.1 surfraw.spec surfraw.lsm \
 		surfraw.1 elvi.1sr links surfraw-bash-completion surfraw.conf surfraw.1 \
